tests/errors/missing_struct_key.re
struct a {
    x: int
}
fn main() {
    let z = a {};
}